--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -8,21 +8,12 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load
-      src="./partials/header.html"
-      icon-path="./img/sprite.svg#logo"
-      highlight-act="active"
-    />
+    <a href="./index.html">Go back</a>
 
-    <main>
-      <div class="container">
-        <h1 class="main-title">
-          <span class="main-title-gradient">Welcome</span> to page 2
-        </h1>
-        <load src="./partials/back-link.html" />
-      </div>
+<ul class="gallery"></ul>
+
+<script type="module" src="./js/1-gallery.js"></script>
+
     </main>
-
-    <load src="./partials/footer.html" />
   </body>
 </html>
